# aae4011-assignment1

./: CMakeLists.txt  README.md  package.xml
launch/: terminal 2  terminal 3
scripts/: detect_cars.py
